--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["JennyCGT <jenniferguayta@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+PyQt5 = "^5.15.4"
+pyserial = "^3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -13,3 +15,6 @@ pytest = "^5.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+cli_script = 'GUI_interface.py:main'
