--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,10 @@ pyserial = "^3.5"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 
+[tool.poetry.scripts]
+main = 'datalogger:main'
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.scripts]
-cli_script = 'GUI_interface.py:main'
